--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,163 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  background-color: #00001a;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.brand {
+  color: white;
+  margin: 5px 9px;
+}
+
+.brand-name {
+  font-family: "Anta", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 2.5rem;
+}
+
+.tagline {
+  font-family: sans-serif;
+  font-size: 0.9rem;
+}
+
+.my-logo {
+  height: 9rem;
+  width: 9rem;
+  margin: 4rem 0 0 41rem;
+}
+
+.content {
+  margin: 2rem 0 0 33rem;
+}
+
+.list-now {
+  font-size: 21px;
+  margin-left: 4.6rem;
+  color: white;
+}
+
+.item {
+  margin: 1rem 0;
+}
+
+.listing {
+  margin: 0.2rem 0;
+}
+
+.input-listing {
+  font-size: 17px;
+  color: black;
+  background-color: white;
+  padding: 5px;
+  border-style: none;
+  outline: none;
+  border: 3px solid white;
+  border-radius: 4px;
+  width: 22rem;
+}
+
+.add-ico {
+  color: red;
+  background-color: white;
+}
+
+.content-list {
+  background-color: white;
+  height: 1.5rem;
+  width: 22.4rem;
+  border: 2px solid white;
+  border-radius: 4px;
+  font-family: sans-serif;
+  padding: 5px 0 0px 5px;
+  display: inline-block;
+}
+
+.content-list:hover {
+  background-color: purple;
+  border: 2px solid purple;
+  color: white;
+}
+
+.delete-ico {
+  background-color: white;
+  color: red;
+}
+
+.functional-button {
+  background-color: rgb(253, 211, 0);
+  color: black;
+  padding: 12px 13px;
+  border-radius: 8px;
+  margin-left: 0.6rem;
+}
+
+.checklist {
+  background-color: purple;
+  color: white;
+  margin: 1rem 0 0 9.3rem;
+  height: 50px;
+  width: 116px;
+  border-radius: 8px;
+}
+
+.checklist span {
+  background-color: purple;
+}
+
+.checklist:hover {
+  cursor: pointer;
+  background-color: red;
+}
+
+.checklist:hover span {
+  display: none;
+}
+
+.checklist:hover:before {
+  content: "REMOVE ALL";
+}
+
+@media (max-width: 794px) {
+  .brand {
+    width: 18rem;
+  }
+
+  #main-logo {
+    margin-left: 7.5rem;
+  }
+
+  #main-content {
+    margin-left: 0.5rem;
+  }
+
+  .list-now {
+    margin-left: 4rem;
+  }
+
+  .input-listing {
+    width: 16.7rem;
+  }
+
+  .content-list {
+    width: 13.4rem;
+  }
+
+  .functional-button {
+    margin-left: 0.2rem;
+  }
+
+  .checklist {
+    margin-left: 7.5rem;
+  }
+}
+
+@media (min-width: 794px) and (max-width: 1100px) {
+  #main-logo {
+    margin-left: 18.3rem;
+  }
+
+  #main-content {
+    margin-left: 10rem;
+  }
 }
